--- a/messeger/src/components/navBar/user/User.css
+++ b/messeger/src/components/navBar/user/User.css
@@ -1,7 +1,28 @@
 
 
-#user {
-    width: 100%;
-    height: 20%;
-    background-color: red;
+.user {
+    margin-top: 10px;
+    min-width: 100%;
+    min-height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #002137;
+}
+
+.user:hover {
+    background-color: #001523;
+    cursor: pointer;
+}
+
+.userPfp {
+    width: 30%;
+    height: 75%;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+.userNickname {
+    color: #adb5bd;
+    margin-right: 10px;
 }
