--- a/messeger/src/components/home/Home.css
+++ b/messeger/src/components/home/Home.css
@@ -5,4 +5,7 @@
     height: 100vh;
     background-color: #001523;
     border-left: 1px solid #002137;
+    display: flex;
+    padding: 20px;
 }
+
