--- a/messenger/src/components/chat/Chat.css
+++ b/messenger/src/components/chat/Chat.css
@@ -9,16 +9,43 @@
     flex-direction: column;
 }
 
+header {
+    background-color: #00253E;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+}
+
+#headerInfoContainer {
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+}
+
+#pfp {
+    width: 4vw;
+    height: 8vh;
+    border-radius: 50%;
+}
+
+#userName {
+    color: #adb5bd;
+    font-size: 14px;
+    margin-left: 10px;
+}
+
+
 #messages {
     width: 100%;
-    height: 87%;
+    height: 80%;
 }
 
 #inputMessage { /* the container */
     width: 100%;
-    height: 13%;
+    height: 10%;
     background-color: #00253E;
-    border-radius: 15px 15px 0 0;
+    border-radius: 5px 5px 0 0;
     display: flex;
     align-items: center;
 }
@@ -36,3 +63,13 @@
 #input:focus {
     outline: 0;   
 }
+
+input::file-selector-button {
+    width: 4vw;
+    height: 7vh;
+    font-weight: bold;
+    color: #adb5bd;
+    padding: 0.5em;
+    border: thin solid grey;
+    border-radius: 10%;
+  }
