--- a/messenger/src/components/chat/Chat.css
+++ b/messenger/src/components/chat/Chat.css
@@ -12,7 +12,7 @@
 header {
     background-color: #00253E;
     width: 100%;
-    height: 10%;
+    height: 6%;
     display: flex;
     align-items: center;
 }
@@ -24,8 +24,8 @@ header {
 }
 
 #pfp {
-    width: 4vw;
-    height: 8vh;
+    width: 2vw;
+    height: 4vh;
     border-radius: 50%;
 }
 
@@ -37,8 +37,13 @@ header {
 
 
 #messages {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
     width: 100%;
-    height: 80%;
+    height: 84%;
+    overflow-y: scroll;
+    padding: 0 0 25px 0;
 }
 
 #inputMessage { /* the container */
@@ -48,6 +53,11 @@ header {
     border-radius: 5px 5px 0 0;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+#otherInputsContainer { /* container for the emote button and file */
+    display: flex;
 }
 
 #input { /* the input for text messages */
@@ -64,12 +74,69 @@ header {
     outline: 0;   
 }
 
-input::file-selector-button {
-    width: 4vw;
-    height: 7vh;
-    font-weight: bold;
-    color: #adb5bd;
-    padding: 0.5em;
-    border: thin solid grey;
-    border-radius: 10%;
+#emoteBtn {
+    width: 40px;
+    height: 40px;
+    background-color: #00253E;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+#emoteBtn:hover {
+    cursor: pointer;
+    background-color: #002c49;
+}
+
+#emoteBtnIcon {
+    width: 80%;
+    height: 80%;
+    filter: invert(19%) sepia(95%) saturate(1352%) hue-rotate(180deg) brightness(98%) contrast(103%);
+}
+
+#inputMedia {
+    width: 40px;
+    height: 40px;
+    background-color: #00253E;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+#inputMedia:hover {
+    cursor: pointer;
+    background-color: #002c49;
+}
+
+#inputMediaIcon {
+    width: 80%;
+    height: 80%;
+    filter: invert(19%) sepia(95%) saturate(1352%) hue-rotate(180deg) brightness(98%) contrast(103%);
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #141414;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #002c49;
+    border-radius: 50px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #00406C;
   }
