--- a/messenger/src/components/chat/message/Message.css
+++ b/messenger/src/components/chat/message/Message.css
@@ -1,32 +1,35 @@
 
 .container {
     display: flex;
-    height: fit-content;
-    width: 70%;
     align-items: center;
+    width: 70%;
+    height: fit-content;
 }
 
 .containerSelf {
     margin: 25px 30% 0 0;
-    justify-content: end;
-
+    justify-content: flex-end;
 }
 
 .containerTarget {
     margin: 25px 0 0 30%;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .messageContainer {
-    max-width: fit-content;
+    max-width: 300px;
     min-width: 35px;
-    max-height: fit-content;
+    max-height: 600px;
     min-height: 23px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
     border-radius: 20px;
+    word-wrap: break-word;
+    white-space: normal; 
+    overflow-wrap: break-word;
 } 
 
 .messageTarget {
@@ -41,6 +44,7 @@
 .messageContent {
     color: #adb5bd;
     font-size: 16px;
+    word-break:break-all;
 }
 
 .messageOwnerPfp {
@@ -48,4 +52,10 @@
     height: 35px;
     border-radius: 50%;
     margin: 0 15px 0 15px;
+}
+
+.messageTime {
+    color: #adb5bd;
+    font-size: 10px;
+    opacity: 0.7;
 }
