Add navigation between home and chat, button for adding friend (do not function)

--- a/messenger/src/components/home/Home.css
+++ b/messenger/src/components/home/Home.css
@@ -6,6 +6,7 @@
     background-color: #001523;
     border-left: 1px solid #002137;
     display: flex;
+    box-sizing: border-box;
     padding: 20px;
 }
 
