--- a/messenger/src/components/chat/Chat.css
+++ b/messenger/src/components/chat/Chat.css
@@ -12,7 +12,7 @@
 header {
     background-color: #00253E;
     width: 100%;
-    height: 6%;
+    height: 8%;
     display: flex;
     align-items: center;
 }
@@ -62,12 +62,14 @@ header {
 
 #input { /* the input for text messages */
     width: 55%;
-    height: 55%;
+    height: 60%;
     border-radius: 20px;
     background-color: #00406C;
     border: 1px solid rgba(0, 17, 28, 0.6);
     color: white;
-    padding: 5px;
+    padding: 10px;
+    font-size: 14px;
+    box-sizing: border-box;
 }
 
 #input:focus {
