--- a/messenger/src/components/navBar/NavBar.css
+++ b/messenger/src/components/navBar/NavBar.css
@@ -16,3 +16,32 @@
     width: 85%;
     
 }
+
+#navbarHeader {
+    box-sizing: border-box;
+    padding: 0 10px 0 10px; 
+}
+
+#navbarHomeIcon {
+    width: 70px;
+    height: auto;
+    filter: invert(19%) sepia(95%) saturate(1352%) hue-rotate(180deg) brightness(98%) contrast(103%);
+    position: absolute;
+    bottom: 0;
+}
+
+#navbarHomeIcon:hover {
+    cursor: pointer;
+    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(150%) contrast(101%);
+}
+
+#AddFriendIcon {
+    width: 25px;
+    height: auto;
+    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(96%) contrast(101%);
+}
+
+#AddFriendIcon:hover {
+    cursor: pointer;
+    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(150%) contrast(101%);
+}
