--- a/messenger/src/components/navBar/NavBar.css
+++ b/messenger/src/components/navBar/NavBar.css
@@ -12,27 +12,19 @@
 #contacts {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 80%;
     width: 85%;
-    
 }
 
 #navbarHeader {
+    background-color: transparent;
+    width: 100%;
+    height: 8%;
     box-sizing: border-box;
-    padding: 0 10px 0 10px; 
-}
-
-#navbarHomeIcon {
-    width: 70px;
-    height: auto;
-    filter: invert(19%) sepia(95%) saturate(1352%) hue-rotate(180deg) brightness(98%) contrast(103%);
-    position: absolute;
-    bottom: 0;
-}
-
-#navbarHomeIcon:hover {
-    cursor: pointer;
-    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(150%) contrast(101%);
+    padding: 0 10px 0 10px;
+    display: flex;
+    justify-content: space-between; 
+    z-index: 100;
 }
 
 #AddFriendIcon {
@@ -42,6 +34,66 @@
 }
 
 #AddFriendIcon:hover {
+    cursor: pointer;
+    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(150%) contrast(101%);
+}
+
+#addFriendInput {
+    background-color: #00406C;
+    width: 80%;
+    height: 50%;
+    border: none;
+    border-radius: 5px;
+    color: #adb5bd;
+    box-sizing: border-box;
+    padding: 0 4px 0 4px;
+    font-size: 13px;
+}
+
+#addFriendInput::placeholder {
+    color: #adb5bd;
+}
+
+#addFriendInput:hover {
+    background-color: hsl(204, 100%, 30%);
+}
+
+#addFriendInput:focus {
+    outline: none;
+}
+
+
+
+#navOptions {
+    display: flex;
+    width: 100%;
+    height: 20%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#navbarOptionsIcon {
+    width: 20px;
+    height: auto;
+    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(96%) contrast(101%);
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+#navbarOptionsIcon:hover {
+    filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(150%) contrast(101%);
+    cursor: pointer;
+}
+
+
+#navbarHomeIcon {
+    width: 7%;
+    height: auto;
+    position: absolute;
+    filter: invert(19%) sepia(95%) saturate(1352%) hue-rotate(180deg) brightness(98%) contrast(103%);
+}
+
+#navbarHomeIcon:hover {
     cursor: pointer;
     filter: invert(15%) sepia(26%) saturate(6491%) hue-rotate(186deg) brightness(150%) contrast(101%);
 }
