add form functionality to login elements and correct responses in the backend

--- a/messenger/src/components/login/Login.css
+++ b/messenger/src/components/login/Login.css
@@ -35,6 +35,13 @@ main {
     text-shadow: 0 3px 5px #001523;
 }
 
+#form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .input {
     width: 250px;
     height: 40px;
