adds an unfinished chat comunication between user and its friend.

--- a/messenger/src/components/login/Login.css
+++ b/messenger/src/components/login/Login.css
@@ -88,6 +88,9 @@ main {
     color: #adb5bd;
     font-size: 15px;
 }
+.submitBtn:focus {
+    outline: none;
+}
 
 .submitBtn:hover {
     cursor: pointer;
