add friend removal, new message's notification. The project is done, for now.

--- a/messenger/src/components/login/Login.css
+++ b/messenger/src/components/login/Login.css
@@ -1,3 +1,10 @@
+@keyframes horizontal-shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
+   }
 
 
 main {
@@ -59,6 +66,11 @@ main {
 .input:focus {
     outline: none;
 }
+
+.invalid:required:invalid {
+    border: 2px solid rgb(218, 65, 65);
+  }
+  
 
 #email {
     margin-bottom: 15px;
