--- a/messenger/src/components/home/Home.css
+++ b/messenger/src/components/home/Home.css
@@ -7,6 +7,7 @@
     border-left: 1px solid #002137;
     display: flex;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 15px;
+    flex-wrap: wrap;
 }
 
