--- a/messenger/src/components/home/newMessage/NewMessage.css
+++ b/messenger/src/components/home/newMessage/NewMessage.css
@@ -1,22 +1,27 @@
 
 
 .newMessage {
-    width: 15vw;
+    min-width: 17%;
     height: 40vh;
     background-color: #00253E;  
     display: flex;
     align-items: center;
+    flex-direction: column;
     border-radius: 10px;
-    margin-right: 80px;
+    margin-right: 30px;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
 .profileInfo {
-    width: 40%;
-    height: 100%;
-    border-right: 1px solid #002E4E;
+    box-sizing: border-box;
+    padding: 3px;
+    width: 100%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .profileInfo:hover {
@@ -26,34 +31,22 @@
 }
 
 .newMessagePfp{
-    width: 80%;
-    height: 25%;
+    width: 40%;
+    height: 70%;
     border-radius: 50%;
     margin-bottom: 2px;
     margin-top: 4px;
 }
 
 .newMessageName {
+    margin-top: 5px;
+    font-size: 18px;
     color: #adb5bd;
-}
-
-.status {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 50%;
-    height: 50%;
-    margin-top: 10px;
-    color: #adb5bd;
-    font-size: 12px;
-    word-wrap: break-word;
-    border-top: 1px solid #002E4E;
 }
 
 .message {
-    width: 60%;
-    height: 100%;
+    width: 100%;
+    height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,6 +55,8 @@
     color: #adb5bd;
     font-size: 16px;
     border-radius: 0px 10px 10px 0;
+    padding: 0 10px 0 10px;
+    box-sizing: border-box;
 }
 
 .message:hover {
@@ -71,13 +66,13 @@
 
 .numberOfMessages {
     margin-top: 5px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 20px;
     background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 13px;
+    font-size: 16px;
     color: white;
 }
